proyecto_Directory-update_2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
                 <div class="SerchBox">
                     <input type="text"
-                    id="inp_palabra">
+                    id="inp_palabra"
+                    >
                 </div>
 
                 <div class="SerchInput" id="serch">
